--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "figlet": "^1.5.0",
     "inquirer": "^6.5.2",
     "mysql": "^2.18.1"
   }
